<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbols_template">%s / %s</string>
    <string name="price_label">Цена: </string>
    <string name="min_price_label">Минимум за день: </string>
    <string name="max_price_label">Максимум за день: </string>
    <string name="last_update_label">Время последнего обновления: %s</string>
    <string name="last_update_simple_label">Обновлено: </string>
    <string name="last_deal_label">Последняя сделка: </string>
    <string name="symbol">Symbol</string>
    <string name="time_separator">/</string>

</resources>