<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CoinDetailActivity"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imageViewDetailCoinLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/symbol"
        android:src="@drawable/ic_baseline_money_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/fromSymbolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/from_symbol_color"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewDetailCoinLogo"
        app:layout_constraintEnd_toStartOf="@id/symbolsSeparator"
        tools:text="BTC"/>

    <TextView
        android:id="@+id/symbolsSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewDetailCoinLogo"
        android:text="@string/time_separator"/>

    <TextView
        android:id="@+id/toSymbolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/to_symbol_color"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewDetailCoinLogo"
        app:layout_constraintStart_toEndOf="@id/symbolsSeparator"
        tools:text="USD"/>

    <TextView
        android:id="@+id/priceLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/symbolsSeparator"/>

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/priceLabelTextView"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/symbolsSeparator"
        tools:text="1000"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/priceLabelTextView"/>

    <TextView
        android:id="@+id/maxPriceLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_price_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line1"/>

    <TextView
        android:id="@+id/maxPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/maxPriceLabelTextView"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/max_price"
        app:layout_constraintTop_toBottomOf="@id/line1"
        tools:text="1000"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/maxPriceLabelTextView"/>

    <TextView
        android:id="@+id/minPriceLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_price_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line2"/>

    <TextView
        android:id="@+id/minPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/minPriceLabelTextView"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/min_price"
        app:layout_constraintTop_toBottomOf="@id/line2"
        tools:text="1000"/>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/minPriceLabelTextView"/>

    <TextView
        android:id="@+id/lastDealLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_deal_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line3"/>

    <TextView
        android:id="@+id/lastDealTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/lastDealLabelTextView"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line3"
        tools:text="1000"/>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/lastDealLabelTextView"/>

    <TextView
        android:id="@+id/lastUpdateLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_update_simple_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line4"/>

    <TextView
        android:id="@+id/lastUpdateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/lastUpdateLabelTextView"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/line4"
        tools:text="1000"/>


</androidx.constraintlayout.widget.ConstraintLayout>